# API_user

./: .gitignore  Dockerfile  README.md  docker-compose.yml  lazy-git.sh  pyproject.toml  requirements.txt
API/: api_utils.py  main.py
API/data/: characters.json
API/schemas/: character.py
Notebooks/: testapi.ipynb
alembic/: env.py
alembic/versions/: 26f3f0ff6639_auto_votes.py  5847d1ce23b5_add_occupation_column_to_characters_.py  5d6d00c125aa_remove_phone_number_column_from_users.py  652dd1ff6e93_add_foreign_key_to_characters_table.py  7f14247c0c23_add_user_table.py  a2d3ec42c43e_add_phone_number.py  b0af5a2060c3_create_characters_table.py  d90cced49961_add_columns_to_characters.py
app/: api_old_utils.py  api_utils.py  config.py  database_utils.py  main.py  models.py  oauth2.py  utils.py
app/routers/: auth.py  character_route.py  character_router.py  user_route.py  user_router.py  vote_router.py
app/schemas/: character.py  user.py  vote.py
data/: characters.json
