[tool.poetry]
name = "api-user"
version = "0.1.0"
description = ""
authors = ["Maryam-Dollet <maryam.dollet@gmail.com>"]
readme = "README.md"
packages = [{include = "api_user"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.0"}
psycopg2 = "^2.9.7"
black = "^23.7.0"
sqlalchemy = "1.4.49"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
